# semver-check

./: 404.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
docs/: index.md  modules.md  publish_azure.md
modules/: index.html
publish_azure/: index.html
search/: search_index.json
semver_check/: __init__.py  server.py
semver_check/static/: script.js  style.css
semver_check/templates/: index.html
tests/: test_api.py  test_foo.py  test_server.py
