[project]
authors = [{name = "Matti Kaupenjohann", email = "matti.kaupenjohann@fh-dortmund.de"}]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "flask>=3.1.0",
  "gunicorn>=23.0.0",
]
description = "This project publishes a simple webserver which validates input against semver."
keywords = ['python']
name = "semver-check"
readme = "README.md"
requires-python = ">=3.9,<4.0"
version = "0.0.1"

[project.urls]
Documentation = "https://makanu.github.io/semver-check/"
Homepage = "https://makanu.github.io/semver-check/"
Repository = "https://github.com/makanu/semver-check"

[tool.uv]
dev-dependencies = [
  "pytest>=7.2.0",
  "pre-commit>=2.20.0",
  "tox-uv>=1.11.3",
  "deptry>=0.20.0",
  "mypy>=0.991",
  "pytest-cov>=4.0.0",
  "ruff>=0.6.9",
  "mkdocs>=1.4.2",
  "mkdocs-material>=8.5.10",
  "mkdocstrings[python]>=0.26.1",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0"]

[tool.setuptools]
py-modules = ["semver_check"]

[tool.mypy]
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
files = ["semver_check"]
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
fix = true
line-length = 120
target-version = "py39"

[tool.ruff.lint]
ignore = [
  # LineTooLong
  "E501", # DoNotAssignLambda
  "E731",
]
select = [
  # flake8-2020
  "YTT", # flake8-bandit
  "S", # flake8-bugbear
  "B", # flake8-builtins
  "A", # flake8-comprehensions
  "C4", # flake8-debugger
  "T10", # flake8-simplify
  "SIM", # isort
  "I", # mccabe
  "C90", # pycodestyle
  "E",
  "W", # pyflakes
  "F", # pygrep-hooks
  "PGH", # pyupgrade
  "UP", # ruff
  "RUF", # tryceratops
  "TRY",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["semver_check"]

[tool.deptry.per_rule_ignores]
DEP002 = ["gunicorn"]
